<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreen">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <!--toolbar-->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="Test" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="?attr/background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/original"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/background"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:text="@string/translation_original"
                    android:textColor="@color/officialBlue" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/original_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/background" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/authorized"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/background"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:text="@string/translation_authorized"
                    android:textColor="@color/officialYellow" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/authorized_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/background" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/others"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/background"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:text="@string/translation_others"
                    android:textColor="@color/officialGreen" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/others_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/background" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>
